修复了对话框中将图形风格从多边形改为其他类型后没有撤销多边形的bug

--- a/Interactive_plotting.vcxproj
+++ b/Interactive_plotting.vcxproj
@@ -191,6 +191,7 @@
   <ItemGroup>
     <ClInclude Include="DrawSettingDlg.h" />
     <ClInclude Include="Graph.h" />
+    <ClInclude Include="GraphStyleEdit.h" />
     <ClInclude Include="Interactive_plotting.h" />
     <ClInclude Include="Interactive_plottingDoc.h" />
     <ClInclude Include="Interactive_plottingView.h" />
@@ -202,6 +203,7 @@
   <ItemGroup>
     <ClCompile Include="DrawSettingDlg.cpp" />
     <ClCompile Include="Graph.cpp" />
+    <ClCompile Include="GraphStyleEdit.cpp" />
     <ClCompile Include="Interactive_plotting.cpp" />
     <ClCompile Include="Interactive_plottingDoc.cpp" />
     <ClCompile Include="Interactive_plottingView.cpp" />
