--- a/Interactive_plotting.vcxproj.filters
+++ b/Interactive_plotting.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="Graph.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="GraphStyleEdit.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Interactive_plotting.cpp">
@@ -66,6 +69,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Graph.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="GraphStyleEdit.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
